--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "the-shade-room-front",
   "version": "0.1.0",
+  "engines": {
+  "node": "12.13.0"
+}
   "private": true,
   "dependencies": {
     "react": "^16.10.2",
