--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "the-shade-room-front",
   "version": "0.1.0",
   "engines": {
-  "node": "12.11.1"
+  "node": "12.11.1",
+  "npm": "6.12.0"
 },
   "private": true,
   "dependencies": {
