--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "the-shade-room-front",
   "version": "0.1.0",
   "engines": {
-  "node": "12.11.1",
-  "npm": "6.12.0"
-},
+    "node": "12.11.1",
+    "npm": "6.12.0"
+  },
   "private": true,
   "dependencies": {
+    "beauty-stars": "^1.0.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
