--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "webpack",
-    "heroku-postbuild": "echo Skip build on Heroku"
+    "start": "PORT=666 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
