--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "beauty-stars": "^1.0.4",
+    "express": "^4.17.1",
     "pg": "^7.14.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -15,7 +16,7 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "PORT=666 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
